--- a/es/404.html
+++ b/es/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -37,7 +37,7 @@
             <a href="/es/" title="Rodolfo Sauce-Guinand">Rodolfo Sauce-Guinand</a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/es/posts/"> Posts </a><a class="menu-item" href="/es/tags/"> Tags </a><a class="menu-item" href="/es/categories/"> Categories </a><span class="menu-item delimiter"></span><a href="#" onclick="return false;" class="menu-item language" title="Selecciona el lenguage">Español<i class="fas fa-chevron-right fa-fw"></i>
+            <div class="menu-inner"><a class="menu-item" href="/es/posts/"> Publicaciones </a><a class="menu-item" href="/es/tags/"> Etiquetas </a><a class="menu-item" href="/es/categories/"> Categorías </a><span class="menu-item delimiter"></span><a href="#" onclick="return false;" class="menu-item language" title="Selecciona el lenguage">Español<i class="fas fa-chevron-right fa-fw"></i>
                         <select class="language-select" title="Select Language" id="language-select-desktop" onchange="location = this.value;"><option value="/404.html">English</option><option value="/es/404.html" selected>Español</option></select>
                     </a><a href="#" onclick="return false;" class="menu-item theme-switch" title="Cambia el tema">
                     <i class="fas fa-adjust fa-fw"></i>
@@ -54,7 +54,7 @@
                 <span></span><span></span><span></span>
             </div>
         </div>
-        <div class="menu" id="menu-mobile"><a class="menu-item" href="/es/posts/" title="">Posts</a><a class="menu-item" href="/es/tags/" title="">Tags</a><a class="menu-item" href="/es/categories/" title="">Categories</a><a href="#" onclick="return false;" class="menu-item theme-switch" title="Cambia el tema">
+        <div class="menu" id="menu-mobile"><a class="menu-item" href="/es/posts/" title="">Publicaciones</a><a class="menu-item" href="/es/tags/" title="">Etiquetas</a><a class="menu-item" href="/es/categories/" title="">Categorías</a><a href="#" onclick="return false;" class="menu-item theme-switch" title="Cambia el tema">
                 <i class="fas fa-adjust fa-fw"></i>
             </a><a href="#" onclick="return false;" class="menu-item" title="Selecciona el lenguage">Español<i class="fas fa-chevron-right fa-fw"></i>
                     <select class="language-select" title="Select Language" onchange="location = this.value;"><option value="/404.html">English</option><option value="/es/404.html" selected>Español</option></select>
